<resources>
    <string name="app_name">stagram</string>

    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">Login</string>
    <string name="signup_email">Register</string>
    <string name="signin_google">Google login</string>
    <string name="signout">Signout</string>

    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>
    <string name="user_id">UserID</string>
    <string name="like">이 좋아합니다.</string>
    <string name="explain">Explanation</string>

    <!-- Alarm -->
    <string name="alarm_favorite1">님이 회원님의 게시물:</string>
    <string name="alarm_favorite2">을 좋아합니다.</string>
    <string name="alarm_comment1">님이 회원님의 게시물:</string>
    <string name="alarm_comment2">에 댓글을 남겼습니다:</string>
    <string name="alarm_follow">님이 회원님을 팔로우하기 시작했습니다.</string>

    <!-- Comment -->
    <string name="send">Send</string>
    <string name="comment_input">Leave comment…</string>

    <!-- Add Photo -->
    <string name="upload_image">Photo Upload</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
</resources>