<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/detailviewitem_profile_imageview"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="7.5dp"
            android:src="@drawable/push_icon" />

        <TextView
            android:id="@+id/detailviewitem_profile_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/detailviewitem_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="7.5dp"
            android:src="@drawable/ic_outline_clear_24" />

    </LinearLayout>

    <ImageView
        android:id="@+id/detailviewitem_imageview_content"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/detailviewitem_favorite_imageview"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_favorite_border" />

        <ImageView
            android:id="@+id/detailviewitem_comment_imageview"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_chat_black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailviewitem_favorite_layout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/detailviewitem_favoritecounter_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/count_0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/detailviewitem_id_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/user_id" />

        <TextView
            android:id="@+id/detailviewitem_explain_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/explain" />
    </LinearLayout>


</LinearLayout>